--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 72 72'><text y='60' font-size='60'>✈️</text></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sophie Martin - Conseillère en Voyages | Portfolio Professionnel</title>
-    <meta name="description" content="Portfolio professionnel de Sophie Martin, conseillère en voyages avec 8+ années d'expérience. Expertise en voyages sur mesure, destinations internationales et service client d'excellence." />
+    <title>Moussab Fatmi - Conseillère en Voyages | Portfolio Professionnel</title>
+    <meta name="description" content="Portfolio professionnel de Moussab Fatmi, conseillère en voyages avec 8+ années d'expérience. Expertise en voyages sur mesure, destinations internationales et service client d'excellence." />
     <style>
       html {
         scroll-behavior: smooth;
