--- a/404.html
+++ b/404.html
@@ -97,21 +97,44 @@
           "@type": "Person",
           "@id": "https://moussabfatmi.me/#person",
           "name": "Moussab Fatmi",
-          "jobTitle": "Conseiller en Voyages",
-          "description": "Conseiller en voyages passionné avec expertise en voyages sur mesure, destinations internationales et service client d'excellence",
+          "jobTitle": "Conseillère en Voyages",
+          "description": "Conseillère en voyages passionnée avec expertise en voyages sur mesure, destinations internationales et service client d'excellence",
+          "url": "https://moussabfatmi.me",
           "image": "https://moussabfatmi.me/og-image.jpg",
+          "email": "moussabfatmi@gmail.com",
+          "telephone": "+212698570282",
+          "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Oujda",
+            "addressCountry": "MA",
+            "addressRegion": "Oriental"
+          },
           "sameAs": [
             "https://www.linkedin.com/in/moussabfatmi/",
-            "https://www.facebook.com/moussabfatmi"
+            "https://www.facebook.com/moussabfatmi",
+            "https://www.instagram.com/moussabfatmi"
           ],
           "worksFor": {
             "@type": "TravelAgency",
             "name": "Moussab Fatmi Travel Services",
+            "url": "https://moussabfatmi.me",
             "address": {
               "@type": "PostalAddress",
               "addressLocality": "Oujda",
               "addressCountry": "MA"
             }
+          },
+          "knowsAbout": [
+            "Voyages sur mesure",
+            "Pèlerinage Hajj et Omra",
+            "Destinations internationales",
+            "Planification de voyage",
+            "Service client voyage"
+          ],
+          "hasOccupation": {
+            "@type": "Occupation",
+            "name": "Conseillère en Voyages",
+            "description": "Spécialisée dans la planification de voyages personnalisés et les services de pèlerinage"
           }
         },
         {
@@ -134,16 +157,20 @@
           },
           "areaServed": ["MA", "FR"],
           "serviceType": ["Travel Planning", "Hajj and Umrah Services", "Custom Travel Packages"],
-          "priceRange": "€€"
+          "priceRange": "€€",
+          "founder": {
+            "@id": "https://moussabfatmi.me/#person"
+          }
         },
         {
           "@type": "WebSite",
           "@id": "https://moussabfatmi.me/#website",
           "url": "https://moussabfatmi.me",
           "name": "Moussab Fatmi - Portfolio Professionnel",
-          "description": "Portfolio professionnel de Moussab Fatmi, conseiller en voyages avec expertise en voyages sur mesure",
+          "description": "Portfolio professionnel de Moussab Fatmi, conseillère en voyages avec expertise en voyages sur mesure",
           "publisher": {"@id": "https://moussabfatmi.me/#person"},
-          "inLanguage": "fr-FR"
+          "inLanguage": "fr-FR",
+          "author": {"@id": "https://moussabfatmi.me/#person"}
         },
         {
           "@type": "BreadcrumbList",
