--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Primary Meta Tags -->
     <title>Moussab Fatmi - Conseiller en Voyages | Portfolio Professionnel</title>
     <meta name="title" content="Moussab Fatmi - Conseiller en Voyages | Portfolio Professionnel" />
-    <meta name="description" content="Portfolio professionnel de Moussab Fatmi, conseiller en voyages avec 8+ années d'expérience. Expertise en voyages sur mesure, destinations internationales et service client d'excellence." />
+    <meta name="description" content="Portfolio professionnel de Moussab Fatmi, conseiller en voyages avec 3 années d'expérience. Expertise en voyages sur mesure, destinations internationales et service client d'excellence." />
     
     <!-- SEO Meta Tags -->
     <meta name="author" content="Moussab Fatmi" />
@@ -46,7 +46,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://moussabfatmi.me" />
     <meta property="og:title" content="Moussab Fatmi - Conseiller en Voyages | Portfolio Professionnel" />
-    <meta property="og:description" content="Portfolio professionnel de Moussab Fatmi, conseiller en voyages avec 8+ années d'expérience. Expertise en voyages sur mesure, destinations internationales et service client d'excellence." />
+    <meta property="og:description" content="Portfolio professionnel de Moussab Fatmi, conseiller en voyages avec 3 années d'expérience. Expertise en voyages sur mesure, destinations internationales et service client d'excellence." />
     <meta property="og:image" content="https://moussabfatmi.me/og-image.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -59,7 +59,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://moussabfatmi.me" />
     <meta name="twitter:title" content="Moussab Fatmi - Conseiller en Voyages | Portfolio" />
-    <meta name="twitter:description" content="Portfolio professionnel de Moussab Fatmi, conseiller en voyages avec 8+ années d'expérience." />
+    <meta name="twitter:description" content="Portfolio professionnel de Moussab Fatmi, conseiller en voyages avec 3 années d'expérience." />
     <meta name="twitter:image" content="https://moussabfatmi.me/twitter-card.jpg" />
     <meta name="twitter:image:alt" content="Photo de Moussab Fatmi - Conseiller en voyages" />
     
