--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://moussabfatmi.me" />
     <meta name="twitter:title" content="Moussab Fatmi - Conseiller en Voyages | Portfolio" />
-    <meta name="twitter:description" content="- Portfolio professionnel de Moussab Fatmi, conseiller en voyages avec 3 années d'expérience." />
+    <meta name="twitter:description" content="Portfolio professionnel de Moussab Fatmi, conseiller en voyages avec 3 années d'expérience." />
     <meta name="twitter:image" content="https://moussabfatmi.me/twitter-card.jpg" />
     <meta name="twitter:image:alt" content="Photo de Moussab Fatmi - Conseiller en voyages" />
     
